fixed  plus icon on mobile

--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -45,6 +45,7 @@ ul > li > a{
 
 
 @media only screen and (max-width: 800px) {
+    ul{margin-left: 20px}
   
     svg{
         margin-top:-8px
